Build ordinary Lean APIs into Java and Kotlin Maven packages
Advance VO1216 with source-named Java APIs, exact BigInteger and nested copied values, scoped FFM ownership and automatic verified native runtime loading. Reuse one native compilation across six ecosystem targets. Add deterministic relocated Maven installation, Java and Kotlin acceptance, docs, CI and 108 installed type observations.